@startuml
    skinparam backgroundColor LightYellow
    skinparam state {
      StartColor MediumBlue
      EndColor Red
      BackgroundColor Peru
      BackgroundColor<<Warning>> Olive
      BorderColor Gray
      FontName Impact
    }
    [*]-->IdleState
    任何状态 --> endState : (Release)
    除endState外的任何状态 --> errorState : (Error)
    state IdleState{
    }
    state initializedState{
    }
    state preparingState{
    }
    state preparedState{
    }
    state startedState{
    }
    state pausedState{
    }
    state stoppedState{
    }
    state completedState{
    }
    state errorState{
    }
    state endState{
    }
    initializedState --> IdleState : (Reset)
    initializedState --> preparingState : (Prepare)
    initializedState --> preparedState : (Prepared)
    preparingState --> IdleState : (Reset)
    preparingState --> preparedState : (Prepared)
    preparedState --> IdleState : (Reset)
    preparedState --> startedState : (Start)
    preparedState --> stoppedState : (Stop)
    startedState --> IdleState : (Reset)
    startedState --> pausedState : (Pause)
    startedState --> stoppedState : (Stop)
    startedState --> completedState : (Complete)
    pausedState --> IdleState : (Reset)
    pausedState --> startedState : (Start)
    pausedState --> stoppedState : (Stop)
    stoppedState --> IdleState : (Reset)
    stoppedState --> preparingState : (Prepare)
    stoppedState --> preparedState : (Prepared)
    completedState --> IdleState : (Reset)
    completedState --> startedState : (Start)
    completedState --> stoppedState : (Stop)
    IdleState --> initializedState : (SetDataSource)
    @enduml
